--- a/iroha-android-sample/build.gradle
+++ b/iroha-android-sample/build.gradle
@@ -29,7 +29,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "io.soramitsu.iroha"
@@ -59,39 +59,65 @@ android {
     }
 }
 
-def SUPPORT_PACKAGE_VERSION = "25.3.1"
-def CIRCLE_IMAGE_VIEW_PACKAGE_VERSION = "2.1.0"
+ext {
+    supportLibVersion = '25.3.1'
+    rxjavaVersion = '2.0.2'
+    rxandroidVersion = '2.0.1'
+    streamLibVersion = '1.1.4'
+    retrofitVersion = '2.1.0'
+    retrofitRxJava2AdapterVersion = '1.0.0'
+    okhttpVersion = '3.4.1'
+    circleImageViewVersion = '2.1.0'
+    sweetAlertDialogVersion = '1.3'
+    materialishProgressVersion = '1.1'
+    zxingAndroidEmbeddedVersion = '3.5.0'
+    aboutLibrariesVersion = '5.9.1'
+    junitVersion = '4.12'
+    espressoVersion = '2.2.2'
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(path: ':iroha-android')
 
-    compile "com.android.support:appcompat-v7:$SUPPORT_PACKAGE_VERSION"
-    compile "com.android.support:support-v4:$SUPPORT_PACKAGE_VERSION"
-    compile "com.android.support:design:$SUPPORT_PACKAGE_VERSION"
-    compile "com.android.support:gridlayout-v7:$SUPPORT_PACKAGE_VERSION"
-    compile "com.android.support:cardview-v7:$SUPPORT_PACKAGE_VERSION"
-    compile "com.android.support:support-annotations:$SUPPORT_PACKAGE_VERSION"
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:support-v4:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:gridlayout-v7:$supportLibVersion"
+    compile "com.android.support:cardview-v7:$supportLibVersion"
+    compile "com.android.support:support-annotations:$supportLibVersion"
 
     // Reactive Programming
-    compile 'io.reactivex.rxjava2:rxjava:2.0.2'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.annimon:stream:1.1.4'
+    compile "io.reactivex.rxjava2:rxjava:$rxjavaVersion"
+    compile "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"
+    compile "com.annimon:stream:$streamLibVersion"
 
     // Network
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$retrofitRxJava2AdapterVersion"
+    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    compile "com.squareup.okhttp3:okhttp:$okhttpVersion"
 
     // UI
-    compile "de.hdodenhof:circleimageview:$CIRCLE_IMAGE_VIEW_PACKAGE_VERSION"
-    compile 'cn.pedant.sweetalert:library:1.3'
-    compile 'com.pnikosis:materialish-progress:1.1'
+    compile "de.hdodenhof:circleimageview:$circleImageViewVersion"
+    compile "cn.pedant.sweetalert:library:$sweetAlertDialogVersion"
+    compile "com.pnikosis:materialish-progress:$materialishProgressVersion"
 
     // Android Utility
-    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
-    compile 'com.mikepenz:aboutlibraries:5.9.1'
+    compile "com.journeyapps:zxing-android-embedded:$zxingAndroidEmbeddedVersion"
+    compile "com.mikepenz:aboutlibraries:$aboutLibrariesVersion"
 
-    testCompile 'junit:junit:4.12'
+    testCompile "junit:junit:$junitVersion"
+
+    // Espresso UI Testing dependencies.
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:${espressoVersion}", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    })
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:${espressoVersion}"
+    androidTestCompile "com.android.support.test.espresso:espresso-idling-resource:${espressoVersion}"
+    androidTestCompile "com.android.support:support-annotations:$supportLibVersion"
 }
