--- a/circle.yml
+++ b/circle.yml
@@ -39,7 +39,7 @@ dependencies:
     - ( sleep 5 && while [ 1 ]; do sleep 1; echo y; done ) | android update sdk --no-ui --all --filter "tools,platform-tools,android-25,extra-google-m2repository,extra-android-m2repository,extra-android-support"
     - echo y | android update sdk --no-ui --all --filter "build-tools-25.0.2"
     - cp -rf licenses $ANDROID_HOME/.
-    - ls ANDROID_HOME/.
+    - ls $ANDROID_HOME/.
 test:
   override:
     - ./gradlew iroha-android:test
