--- a/iroha-android-sample/build.gradle
+++ b/iroha-android-sample/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 
     // UI
     compile "de.hdodenhof:circleimageview:$CIRCLE_IMAGE_VIEW_PACKAGE_VERSION"
-    compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.github.f0ris.sweetalert:library:1.5.1'
     compile 'com.pnikosis:materialish-progress:1.1'
 
     // Android Utility
